--- a/packages/frontend/src/features/admin/admin.module.css
+++ b/packages/frontend/src/features/admin/admin.module.css
@@ -7,7 +7,7 @@
     flex-wrap: nowrap;
 }
 
-.dashboard{
+.container > main{
     height: 100%;
     width: 100%;
     position: relative;
@@ -15,6 +15,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2vh;
-    justify-content: start;
+    justify-content: center;
 }
