--- a/packages/frontend/src/features/admin/views/cycles/Cycles.module.css
+++ b/packages/frontend/src/features/admin/views/cycles/Cycles.module.css
@@ -11,7 +11,7 @@
     align-items: center;
 }
 
-.container > div{
+.container > section{
     background: blue;
     width: 50%;
     height: 100%;
