--- a/packages/frontend/src/features/auth/AuthForm.module.css
+++ b/packages/frontend/src/features/auth/AuthForm.module.css
@@ -1,9 +1,8 @@
-@reference "@/index.css";
+@reference "@/main.css";
 
 /* Container Principal (Centralizado e Limpo) */
 .container {
   width: 100%;
-  max-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,7 +19,7 @@
 }
 
 .header h2 {
-  @apply font-bold;
+  @apply font-black;
   color: #2ecc71;
   font-size: 1.8rem;
   margin: 0;
@@ -34,7 +33,7 @@
 
 /* Formulário */
 .formContainer {
-  width: 100%;
+  width: 60%;
   display: flex;
   flex-direction: column;
 }
