--- a/packages/frontend/src/features/landing/LandingLayout.module.css
+++ b/packages/frontend/src/features/landing/LandingLayout.module.css
@@ -7,20 +7,19 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background-color: #f3f4f6;
 }
 
 .leftPanel {
   height: 100%;
   width: 55%;
-  background-color: #2ecc71;
+  background-color: var(--color-background-light);
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 2rem;
   position: relative;
   overflow: hidden;
-  background-image: radial-gradient(circle at 2vh 2vh, rgba(255,255,255,0.1) 0.2vh, transparent 0);
+  background-image: radial-gradient(circle at 2vh 2vh, rgba(2, 89, 15,0.1) 0.2vh, transparent 0);
   background-size: 24px 24px;
 }
 
@@ -47,8 +46,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ffffff;
-  padding: 2rem;
+  background-color: var(--color-background-tint);
   position: relative;
-  box-shadow: -5px 0 15px rgba(0,0,0,0.05);
+  box-shadow: -5px 0 15px rgba(2, 38, 1,0.2);
+}
+
+@media (max-width: 599px) {
+  .container{
+    height: 100%;
+    width: 100%;
+  }
+  .leftPanel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  .rightPanel {
+    width: 100%;
+    height: 100%;
+  }
 }
