--- a/packages/frontend/src/features/auth/AuthForm.module.css
+++ b/packages/frontend/src/features/auth/AuthForm.module.css
@@ -192,6 +192,9 @@
   text-decoration: underline;
 }
 
+.selectorAdaptation {
+  margin-bottom: 2vh;
+}
 @media (max-width: 599px) {
   .container{
     height: 100%;
