--- a/packages/frontend/src/features/auth/styles.module.css
+++ b/packages/frontend/src/features/auth/styles.module.css
@@ -32,7 +32,7 @@
 }
 
 .formContainer {
-  width: 60%;
+  width: 80%;
   display: flex;
   flex-direction: column;
 }
@@ -58,7 +58,7 @@
 
 .inputGroup input {
   width: 100%;
-  padding: clamp(0.8rem, 1vh, 1.2rem) 1vw; 
+  padding: clamp(0.8rem, 1vh, 1.2rem) 1vw;
   border: 0.2vh solid var(--color-border-light);
   border-radius: 0.8vh;
   font-size: clamp(14px, 1.1vw, 20px);
@@ -94,7 +94,7 @@
   right: 1vw;
   cursor: pointer;
   color: var(--color-disabled);
-  background: transparent!important;
+  background: transparent !important;
   border: none;
   padding: 0;
   display: flex;
@@ -106,7 +106,7 @@
 
 .eyeIcon:hover {
   background: transparent;
-  color: var(--color-icon-active)!important;
+  color: var(--color-icon-active) !important;
 }
 
 .iconSelectorContainer {
@@ -130,7 +130,9 @@
   border-radius: 50%;
   cursor: pointer;
   border: 0.2vh solid var(--color-border-light);
-  transition: transform 0.2s, border-color 0.2s;
+  transition:
+    transform 0.2s,
+    border-color 0.2s;
   overflow: hidden;
 }
 
@@ -151,7 +153,7 @@
   box-shadow: 0 0 0 0.3vh color-mix(in srgb, var(--color-highlight) 30%, transparent);
 }
 
-.formContainer button[type="submit"] {
+.formContainer button[type='submit'] {
   width: 100%;
   padding: 1.5vh;
   background-color: var(--color-identity-primary);
@@ -198,7 +200,7 @@
 
 .localErrorBox {
   background-color: #fff1f0;
-  border: 0.125rem solid #ff4d4f; 
+  border: 0.125rem solid #ff4d4f;
   padding: clamp(0.75rem, 2vw, 0.5rem);
   border-radius: 0.5rem;
   margin-top: 0.75rem;
@@ -220,19 +222,25 @@
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-5px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @media (max-width: 599px) {
-  .container{
+  .container {
     height: 100%;
     width: 100%;
   }
-  .formContainer{
+  .formContainer {
     width: 80%;
   }
-  .iconOption{
+  .iconOption {
     width: 6vh;
     height: 6vh;
   }
